examples/medplum-provider/src/pages/patient/PatientPage.module.css
.container {
  display: flex;
  flex-direction: row;
  align-items: stretch;
  height: calc(100vh - var(--app-shell-header-height, 0));
  overflow: hidden;
}

.sidebar {
  flex: 1;
  width: 350px;
  height: 100%;
}

.scrollArea {
  height: 100%;
}

.content {
  display: flex;
  flex-direction: column;
  width: calc(100% - 350px);
  height: 100%;
  overflow: hidden;
  border-inline-start: 1px solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
}

.contentBody {
  flex: 1;
  min-height: 0;
  overflow: auto;
}

